# t113-utils

./: .gitignore  CMakeLists.txt  README.md  link.ld
FreeRTOS-HIFI4-DSP/: Makefile  link.ld
FreeRTOS-HIFI4-DSP/include/: platform.h  rpmsg.h  rsc_table.h
FreeRTOS-HIFI4-DSP/src/: main.c  msgbox.c  resource_table.c
SyterKit/board/100ask-t113i/: board.c
SyterKit/board/100ask-t113i/load_c906/c906_firmware/src/: main.c
SyterKit/board/100ask-t113i/sys_info/: main.c
c906/: CMakeLists.txt
c906/include/: string.h
c906/src/: CMakeLists.txt  main.c
cpux_code/: rpmsg_open.c  rpmsg_ping.c
include/: rpmsg.h  rsc_table.h
lib/: CMakeLists.txt  strncpy.c
src/: CMakeLists.txt  main.c  resource_table.c
